# L1TrApp1

./: .replit  CLICKHOUSE_DATA_MODEL.md  CLICKHOUSE_SETUP_COMPLETE.md  CLICKHOUSE_SETUP_GUIDE.md  COMPLETE_SETUP_GUIDE.md  COMPREHENSIVE_L1_GUIDE.md  DATABASE_SETUP_GUIDE.md  FOLDER_ANALYZER_QUICK_GUIDE.md  HOW_TO_RUN.md  HOW_TO_RUN_FOLDER_ANALYZER.md  HOW_TO_RUN_TESTS.md  L1_SETUP_STEPS.md  LINUX_DEPLOYMENT_GUIDE.md  MISTRAL_SETUP_GUIDE.md  ML_TRAINING_GUIDE.md  QUICK_START_ANOMALY_DETECTION.md  README_CLICKHOUSE_SETUP.md  SIMPLIFIED_DEPLOYMENT_GUIDE.md  TESLA_P40_SETUP_SIMPLE.md  analyze_pcap_with_mistral.py  anomaly_results.json  clickhouse_18_compatible.py  clickhouse_18_raw_sql.sql  clickhouse_local_setup.py  clickhouse_setup.py  compare_analysis_methods.py  comprehensive_l1_analyzer.py  create_clickhouse_18_tables.sql  create_clickhouse_tables.sql  debug_table_schemas.py  demo_enhanced_ml_output.py  demo_ml_analysis.py  demo_ml_training.py  demo_streaming_analysis.py  demo_ue_event_analysis.py  demo_unified_analyzer.py  detect_communication_failures.py  du_ru_mac_configuration.py  du_to_ru_detection_demo.py  enhanced_hybrid_analyzer.py  (+52 more)
client/: index.html
client/src/: App.tsx  index.css
models/: README.md
server/: clickhouse.ts  index.ts  llm_service.py  routes.ts  storage.ts
server/services/: clickhouse_client.py  mistral_analyzer.py  pcap_processor.py  tslam_service.py  (+2 more)
shared/: schema.ts
test_data/: anomaly_analysis_report.txt  sample_file1.txt  sample_file2.txt
test_network_data/: sample_error_log.txt  sample_network.txt
training_data/: README.md
(+13 files in other folders)
