[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.8.18",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scapy>=2.6.1",
    "scikit-learn>=1.7.1",
    "requests>=2.32.4",
    "joblib>=1.5.1",
    "scapy-python3>=0.26",
    "llama-cpp-python>=0.3.15",
]
